<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id='@+id/fragment1'>
    
    <!-- 小车设置页面3：天线横向偏移 -->
    <LinearLayout 
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp">
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/info_fragment3_antenna_rear"
             android:textSize="32sp"
             android:textColor="#999999"/>
     </LinearLayout>
    
     <RelativeLayout 
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="15">
         
         <ImageView 
             android:layout_width="450dp"
             android:layout_height="360dp"
             android:layout_marginLeft="70dp"
             android:src="@drawable/car03"
             android:layout_centerVertical="true"/>
		
         <LinearLayout 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             >
             
             <EditText 
	             android:id="@+id/edit3"
	             android:maxLength="6"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center_vertical"
	             android:layout_marginLeft="98dp"
	             android:hint="@string/carmessage_editHint"
	             android:numeric="decimal|signed"
	             android:textSize="24sp"
	             android:textColor="#999999"/>
	         
	         <TextView 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center_vertical"
	             android:layout_marginBottom="3dp"
	             android:textSize="24sp"
	             android:text="@string/meter"
	             android:textColor="#999999"/>
         </LinearLayout>
         
     </RelativeLayout>
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:layout_margin="10dp"
         android:layout_gravity="center">
         
         <ImageButton 
             android:id="@+id/help3"
             style="@style/carmessage_helpstyle"/>
     </LinearLayout>

</LinearLayout>
